# mstc-cloud-worker

./: .gitignore  Dockerfile  README.md  build.gradle  settings.gradle
charts/minio/: Chart.yaml
charts/minio/templates/: deployment.yaml
charts/mstc-cloud-worker/: Chart.yaml  values.yaml
charts/mstc-cloud-worker/charts/minio/: Chart.yaml  values.yaml
charts/mstc-cloud-worker/charts/minio/templates/: service.yaml
charts/mstc-cloud-worker/charts/mstc-work-queue/: Chart.yaml  values.yaml
charts/mstc-cloud-worker/charts/mstc-work-queue/templates/: deployment.yaml
charts/mstc-cloud-worker/templates/: deployment.yaml  service.yaml
charts/rabbitmq/templates/: service.yaml
config/: service-account.yaml
gradle/: k8shelper.gradle
src/main/java/mstc/cloud/worker/: WorkerApplication.java
src/main/java/mstc/cloud/worker/config/: WorkerConfig.java
src/main/java/mstc/cloud/worker/controller/: WorkerController.java
src/main/java/mstc/cloud/worker/data/: DataService.java
src/main/java/mstc/cloud/worker/domain/: DataItem.java  (+4 more)
src/main/resources/: application-local.yaml  application.yaml  banner.txt
src/test/data/: AstrosModalAGARD445.bdf
src/test/java/mstc/cloud/worker/: RequestProcessorTest.java  Util.java  WorkerRequestServiceTest.java
src/test/python/mstc-cloud-worker/: Dockerfile  Makefile  pyproject.toml
src/test/python/mstc-cloud-worker/mstc_cloud_worker/: __init__.py  client.py  config.py  data.py  main.py
src/test/python/mstc-cloud-worker/tests/: conftest.py  test_send.py
src/test/resources/: application.yaml  docker-compose.yml
(+19 files in other folders)
