[tool.poetry]
name = "mstc-cloud-worker"
version = "0.1.0"
description = "Pyhton test client for project"
authors = ["Dennis Reedy <dennis.reedy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.2.0"
minio = "^7.1.5"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = ">=6.0.0"
black = "^22.1.0"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
